Some writing done

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -890,6 +890,19 @@
   archiveprefix = {Internet Archive}
 }
 
+@book{TotaroSufferingParadiseBubonic2005,
+  title = {Suffering in Paradise: The Bubonic Plague in {{English}} Literature from {{More}} to {{Milton}}},
+  shorttitle = {Suffering in Paradise},
+  author = {Totaro, Rebecca Carol Noel},
+  year = {2005},
+  series = {Medieval \& {{Renaissance}} Literary Studies},
+  publisher = {{Duquesne University Press}},
+  address = {{Pittsburgh, Pa}},
+  isbn = {978-0-8207-0362-6},
+  lccn = {PR408.P62 T68 2005},
+  keywords = {16th century,17th century,Diseases in literature,{Early modern, 1500-1700},England,English literature,Great Britain,History,History and criticism,Literature and medicine,Medicine in literature,Plague,Plague in literature}
+}
+
 @book{vanrossumPythonReferenceManual2009,
   title = {Python 3 {{Reference Manual}}},
   author = {Van Rossum, Guido and Drake, Fred L.},
